feat: 完善医护端告警中心功能
主要更新:
1. 健康数据异常检测优化
   - 修改MedicalRoundServiceImpl,在创建告警时正确设置alertValue字段
   - 告警记录现在包含完整的异常数值信息

2. 实时告警推送
   - 医护端订阅/topic/alerts通用告警通道,接收所有实时告警
   - 子女端已实现后端推送逻辑(/topic/alerts/user/{userId})
   - 管理端通过数据库查询显示告警列表

3. 管理端UI优化
   - 在预警管理侧边栏添加红色铃铛徽章
   - 徽章显示待处理告警数量,支持99+显示
   - 添加脉冲动画效果吸引注意
   - 处理/忽略/删除告警后自动更新徽章数量

技术细节:
- 前端WebSocket使用SockJS+Stomp实现
- 告警数据包含老人姓名、房间号、异常数值等完整信息
- CSS动画优化用户体验

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>